<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cap_img_path_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cap_img_path"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/bro_img_path_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/br_img_path"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/cap_vid_path_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cap_vid_path"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/bro_vid_path_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/br_vid_path"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/bro_doc_path_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/br_doc_path"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/bro_audio_path_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/br_aud_path"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/open_dialog_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/open_dialog"/>

</LinearLayout>